Added gun select OOF

--- a/HowToPlay.html
+++ b/HowToPlay.html
@@ -141,6 +141,9 @@ span.psw {
 <img style=" position: absolute; top: 32%; left: 78%; width: 5%; height: 8%;" src="Keys/and-1.png">
 <img style=" position: absolute; top: 32%; left: 83.5%; width: 5%; height: 8%;" src="Keys/@-and-2.png">
 
+<img style=" position: absolute; top: 52%; left: 21%; width: 7%; height: 16%;" src="Keys/MouseLeft.png">
+<img style=" position: absolute; top: 52%; left: 30.5%; width: 7%; height: 16%;" src="Keys/MouseRight.png">
+
 <a href="index.html">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
 </a>
