Added more weapons

--- a/Barracks.html
+++ b/Barracks.html
@@ -268,7 +268,7 @@
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
      <img onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/GunAK47BulletPiont.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/GunAK47BulletPiont.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/HK416.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/SR-2Veresk.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/SR-2Veresk.png"></img>
    </div>
    </div>
    <img id="PrimaryWeaponSlotBulletPoint" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -372,7 +372,7 @@
     <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div class="dropdown-content">
      <img onclick="document.getElementById('PrimaryWeaponSlotRicochet').src='GameTextures/M4.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/M4.png"></img>
-     <img onclick="document.getElementById('PrimaryWeaponSlotRicochet').src='GameTextures/HK416.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/HK416.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotRicochet').src='GameTextures/MP5.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/MP5.png"></img>
     </div>
     </div>
     <img id="PrimaryWeaponSlotRicochet" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
@@ -462,9 +462,17 @@
         <p style=" position: absolute; font-size: 35px; text-align: center; top: 11%; left: 10%;">Glaze</p>
       <img style=" position: absolute; top: 17%; left: 2%; width: 90px; height: 90px;" srcset="OperatorImages/Glaze.png"></img>
     </div>
-    <p style=" position: absolute; top: 30%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">PRIMARY:</p>
+    <p style=" position: absolute; top: 30%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">PRIMARY: </p>
     <p style=" position: absolute; top: 45.5%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">ATTACHMENTS</p>
     <p style=" position: absolute; top: 57%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div class="dropdown">
+    <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
+    <div class="dropdown-content">
+     <img onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/Vityaz-SN.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/Vityaz-SN.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/RMB-93.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/RMB-93.png"></img>
+    </div>
+    </div>
+    <img id="PrimaryWeaponSlotGlaze" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 35%; left: 5.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 4%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 8%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
@@ -492,6 +500,14 @@
     <p style=" position: absolute; top: 30%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">PRIMARY:</p>
     <p style=" position: absolute; top: 45.5%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">ATTACHMENTS</p>
     <p style=" position: absolute; top: 57%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div class="dropdown">
+    <div style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
+    <div class="dropdown-content">
+     <img onclick="document.getElementById('PrimaryWeaponSlotOutlook').src='GameTextures/SLR.png'" style=" position: absolute; top: 0%; left: -5.5%; width: 210px; height: 67px;" src="GameTextures/SLR.png"></img>
+     <img onclick="document.getElementById('PrimaryWeaponSlotOutlook').src='GameTextures/RMB-93.png'"style=" position: absolute; top: 106%; left: -5.5%; width: 210px; height: 67px;" srcset="GameTextures/RMB-93.png"></img>
+    </div>
+    </div>
+    <img id="PrimaryWeaponSlotOutlook" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 35%; left: 5.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 4%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 8%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
