--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -222,6 +222,8 @@ window.addEventListener("load", function(){
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Glaze.png"></img>
     </div>
     <div class="square"></div>
+    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/Vityaz-SN.png"></img>
+    <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/Tokarev.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
